# image-processor

tasks/image_processor/: BMPImage.cpp  BMPImage.h  CLIParser.cpp  CLIParser.h  CMakeLists.txt  Factory.cpp  Factory.h  Filter.cpp  Filter.h  FilterSettings.cpp  FilterSettings.h  Pipeline.cpp  Pipeline.h  image_processor.cpp
tasks/image_processor/Filters/: Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Grayscale.cpp  Grayscale.h  Mosaic.cpp  Mosaic.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
